src/highLevelLanguage/MiniFunParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g 2014-02-06 11:32:30

package highLevelLanguage;

import highLevelLanguage.Node.*;
import java.util.HashMap;
import java.util.ArrayList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class MiniFunParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "LET", "IN", "SEMIC", "VAR", "ID", "COL", "ASS", "FUN", "LPAR", "COMMA", "RPAR", "CLPAR", "CRPAR", "EQ", "LESSEQ", "GREATEREQ", "PLUS", "MINUS", "OR", "TIMES", "DIVIDE", "AND", "NAT", "TRUE", "FALSE", "EMPTY", "IF", "THEN", "ELSE", "SLPAR", "DOUBLECOL", "SRPAR", "FIRST", "REST", "PRINT", "NOT", "INTTYPE", "BOOLTYPE", "ARROW", "WHITESP", "ERR"
    };
    public static final int REST=37;
    public static final int SRPAR=35;
    public static final int CRPAR=16;
    public static final int NOT=39;
    public static final int ID=8;
    public static final int AND=25;
    public static final int NAT=26;
    public static final int EOF=-1;
    public static final int ERR=44;
    public static final int IF=30;
    public static final int DOUBLECOL=34;
    public static final int IN=5;
    public static final int THEN=31;
    public static final int LPAR=12;
    public static final int LESSEQ=18;
    public static final int COMMA=13;
    public static final int COL=9;
    public static final int PLUS=20;
    public static final int VAR=7;
    public static final int EQ=17;
    public static final int DIVIDE=24;
    public static final int GREATEREQ=19;
    public static final int BOOLTYPE=41;
    public static final int ELSE=32;
    public static final int MINUS=21;
    public static final int WHITESP=43;
    public static final int TRUE=27;
    public static final int PRINT=38;
    public static final int EMPTY=29;
    public static final int CLPAR=15;
    public static final int OR=22;
    public static final int ARROW=42;
    public static final int RPAR=14;
    public static final int ASS=10;
    public static final int SLPAR=33;
    public static final int FUN=11;
    public static final int SEMIC=6;
    public static final int TIMES=23;
    public static final int FALSE=28;
    public static final int INTTYPE=40;
    public static final int LET=4;
    public static final int FIRST=36;

    // delegates
    // delegators


        public MiniFunParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public MiniFunParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return MiniFunParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g"; }


        private ArrayList<HashMap<String,STentry>> symTable = new ArrayList<HashMap<String,STentry>>();    
        private int nestingLevel=0;             



    // $ANTLR start "prog"
    // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:20:1: prog returns [Node ast] : LET d= declist IN e= exp SEMIC ;
    public final Node prog() throws RecognitionException {
        Node ast = null;

        ArrayList<Node> d = null;

        Node e = null;


        try {
            // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:21:2: ( LET d= declist IN e= exp SEMIC )
            // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:21:4: LET d= declist IN e= exp SEMIC
            {
            match(input,LET,FOLLOW_LET_in_prog30); 

            	  	HashMap<String,STentry> hm = new HashMap<String,STentry>();
            	   	symTable.add(hm);
            	
            pushFollow(FOLLOW_declist_in_prog52);
            d=declist();

            state._fsp--;

            match(input,IN,FOLLOW_IN_in_prog55); 
            pushFollow(FOLLOW_exp_in_prog59);
            e=exp();

            state._fsp--;

            match(input,SEMIC,FOLLOW_SEMIC_in_prog61); 

            		ast = new ProgNode(d,e);
            	

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ast;
    }
    // $ANTLR end "prog"


    // $ANTLR start "declist"
    // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:33:1: declist returns [ArrayList<Node> astList] : ( VAR i= ID COL t= type ASS e= exp SEMIC | FUN i= ID COL (rt= type LPAR (fpi= ID COL fpt= type ( COMMA pi= ID COL pt= type )* )? RPAR | at= arrowType LPAR (fpi= ID ( COMMA pi= ID )* )? RPAR ) CLPAR ( (dec= declist ) e= exp ) CRPAR SEMIC )* ;
    public final ArrayList<Node> declist() throws RecognitionException {
        ArrayList<Node> astList = null;

        Token i=null;
        Token fpi=null;
        Token pi=null;
        Node t = null;

        Node e = null;

        Node rt = null;

        Node fpt = null;

        Node pt = null;

        Node at = null;

        ArrayList<Node> dec = null;


        try {
            // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:34:3: ( ( VAR i= ID COL t= type ASS e= exp SEMIC | FUN i= ID COL (rt= type LPAR (fpi= ID COL fpt= type ( COMMA pi= ID COL pt= type )* )? RPAR | at= arrowType LPAR (fpi= ID ( COMMA pi= ID )* )? RPAR ) CLPAR ( (dec= declist ) e= exp ) CRPAR SEMIC )* )
            // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:34:4: ( VAR i= ID COL t= type ASS e= exp SEMIC | FUN i= ID COL (rt= type LPAR (fpi= ID COL fpt= type ( COMMA pi= ID COL pt= type )* )? RPAR | at= arrowType LPAR (fpi= ID ( COMMA pi= ID )* )? RPAR ) CLPAR ( (dec= declist ) e= exp ) CRPAR SEMIC )*
            {

            			astList = new ArrayList<Node>();
            	   		int offSet=1;
            	   	
            // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:39:5: ( VAR i= ID COL t= type ASS e= exp SEMIC | FUN i= ID COL (rt= type LPAR (fpi= ID COL fpt= type ( COMMA pi= ID COL pt= type )* )? RPAR | at= arrowType LPAR (fpi= ID ( COMMA pi= ID )* )? RPAR ) CLPAR ( (dec= declist ) e= exp ) CRPAR SEMIC )*
            loop6:
            do {
                int alt6=3;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==VAR) ) {
                    alt6=1;
                }
                else if ( (LA6_0==FUN) ) {
                    alt6=2;
                }


                switch (alt6) {
            	case 1 :
            	    // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:39:6: VAR i= ID COL t= type ASS e= exp SEMIC
            	    {
            	    match(input,VAR,FOLLOW_VAR_in_declist91); 
            	    i=(Token)match(input,ID,FOLLOW_ID_in_declist95); 
            	    match(input,COL,FOLLOW_COL_in_declist97); 
            	    pushFollow(FOLLOW_type_in_declist101);
            	    t=type();

            	    state._fsp--;

            	    match(input,ASS,FOLLOW_ASS_in_declist103); 
            	    pushFollow(FOLLOW_exp_in_declist107);
            	    e=exp();

            	    state._fsp--;

            	    match(input,SEMIC,FOLLOW_SEMIC_in_declist109); 

            	    	   	DecVarNode vn = new DecVarNode((i!=null?i.getText():null),t,e);
            	    	    	STentry entry = new STentry(vn,offSet++);
            	    	    	HashMap<String,STentry> hm= symTable.get(nestingLevel);
            	    	    	
            	    	    	if (hm.put((i!=null?i.getText():null),entry) != null){
            	    	    		System.out.println("Identifier "+(i!=null?i.getText():null)+" at line "+(i!=null?i.getLine():0)+" already defined");
            	    	      		System.exit(0);
            	    	      	}
            	    	    	
            	    	    	astList.add(vn);
            	    	    

            	    }
            	    break;
            	case 2 :
            	    // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:53:6: FUN i= ID COL (rt= type LPAR (fpi= ID COL fpt= type ( COMMA pi= ID COL pt= type )* )? RPAR | at= arrowType LPAR (fpi= ID ( COMMA pi= ID )* )? RPAR ) CLPAR ( (dec= declist ) e= exp ) CRPAR SEMIC
            	    {
            	    match(input,FUN,FOLLOW_FUN_in_declist129); 
            	    i=(Token)match(input,ID,FOLLOW_ID_in_declist133); 
            	    match(input,COL,FOLLOW_COL_in_declist135); 
            	    DecFunNode fn = null;
            	    // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:54:6: (rt= type LPAR (fpi= ID COL fpt= type ( COMMA pi= ID COL pt= type )* )? RPAR | at= arrowType LPAR (fpi= ID ( COMMA pi= ID )* )? RPAR )
            	    int alt5=2;
            	    int LA5_0 = input.LA(1);

            	    if ( ((LA5_0>=INTTYPE && LA5_0<=BOOLTYPE)) ) {
            	        alt5=1;
            	    }
            	    else if ( (LA5_0==LPAR) ) {
            	        alt5=2;
            	    }
            	    else {
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 5, 0, input);

            	        throw nvae;
            	    }
            	    switch (alt5) {
            	        case 1 :
            	            // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:55:6: rt= type LPAR (fpi= ID COL fpt= type ( COMMA pi= ID COL pt= type )* )? RPAR
            	            {
            	            pushFollow(FOLLOW_type_in_declist153);
            	            rt=type();

            	            state._fsp--;


            	            	   	fn = new DecFunNode((i!=null?i.getText():null),rt);
            	            	    	STentry entry = new STentry(fn,offSet++);
            	            	    	HashMap<String,STentry> hm=symTable.get(nestingLevel);
            	            	    	
            	            	    	if (hm.put((i!=null?i.getText():null),entry) != null){
            	            	    		System.out.println("Identifier "+(i!=null?i.getText():null)+" at line "+(i!=null?i.getLine():0)+" already defined");
            	            	      		System.exit(0);
            	            	      	}
            	            	  	
            	            match(input,LPAR,FOLLOW_LPAR_in_declist167); 

            	            		   		
            	            		        int parOffSet=-1;
            	            		        hm = new HashMap<String,STentry>();
            	            		        symTable.add(hm);
            	            		        nestingLevel++;
            	            		 	
            	            // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:74:7: (fpi= ID COL fpt= type ( COMMA pi= ID COL pt= type )* )?
            	            int alt2=2;
            	            int LA2_0 = input.LA(1);

            	            if ( (LA2_0==ID) ) {
            	                alt2=1;
            	            }
            	            switch (alt2) {
            	                case 1 :
            	                    // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:75:8: fpi= ID COL fpt= type ( COMMA pi= ID COL pt= type )*
            	                    {
            	                    fpi=(Token)match(input,ID,FOLLOW_ID_in_declist196); 
            	                    match(input,COL,FOLLOW_COL_in_declist198); 
            	                    pushFollow(FOLLOW_type_in_declist202);
            	                    fpt=type();

            	                    state._fsp--;


            	                    			    	ParamNode pn = new ParamNode((fpi!=null?fpi.getText():null),fpt);
            	                    			        entry = new STentry(pn,parOffSet--);
            	                    			        hm.put((fpi!=null?fpi.getText():null),entry);
            	                    			        fn.addParam(pn);
            	                    			  	
            	                    // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:82:8: ( COMMA pi= ID COL pt= type )*
            	                    loop1:
            	                    do {
            	                        int alt1=2;
            	                        int LA1_0 = input.LA(1);

            	                        if ( (LA1_0==COMMA) ) {
            	                            alt1=1;
            	                        }


            	                        switch (alt1) {
            	                    	case 1 :
            	                    	    // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:82:9: COMMA pi= ID COL pt= type
            	                    	    {
            	                    	    match(input,COMMA,FOLLOW_COMMA_in_declist222); 
            	                    	    pi=(Token)match(input,ID,FOLLOW_ID_in_declist226); 
            	                    	    match(input,COL,FOLLOW_COL_in_declist228); 
            	                    	    pushFollow(FOLLOW_type_in_declist232);
            	                    	    pt=type();

            	                    	    state._fsp--;


            	                    	    			    	pn = new ParamNode((pi!=null?pi.getText():null),pt);
            	                    	    			        entry = new STentry(pn,parOffSet--);
            	                    	    			        if (hm.put((pi!=null?pi.getText():null),entry) != null){
            	                    	    			        	System.out.println("Identifier "+(pi!=null?pi.getText():null)+" at line "+(pi!=null?pi.getLine():0)+" already defined");
            	                    	    			           	System.exit(0);}
            	                    	    			          	fn.addParam(pn);
            	                    	    			   	

            	                    	    }
            	                    	    break;

            	                    	default :
            	                    	    break loop1;
            	                        }
            	                    } while (true);


            	                    }
            	                    break;

            	            }

            	            match(input,RPAR,FOLLOW_RPAR_in_declist262); 

            	            }
            	            break;
            	        case 2 :
            	            // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:94:6: at= arrowType LPAR (fpi= ID ( COMMA pi= ID )* )? RPAR
            	            {
            	            pushFollow(FOLLOW_arrowType_in_declist279);
            	            at=arrowType();

            	            state._fsp--;

            	            ArrowTypeNode atn = (ArrowTypeNode)at;
            	             
            	            	    	fn = new DecFunNode((i!=null?i.getText():null),atn.getRetType());
            	            	    	STentry entry = new STentry(fn,offSet++);
            	            	    	HashMap<String,STentry> hm=symTable.get(nestingLevel);
            	            	    	
            	            	    	if (hm.put((i!=null?i.getText():null),entry) != null){
            	            	    		System.out.println("Identifier "+(i!=null?i.getText():null)+" at line "+(i!=null?i.getLine():0)+" already defined");
            	            	      		System.exit(0);
            	            	      	}
            	            	    
            	            match(input,LPAR,FOLLOW_LPAR_in_declist295); 

            	            	    	int parOffSet=-1;
            	            		    hm = new HashMap<String,STentry>();
            	            		    symTable.add(hm);
            	            		    nestingLevel++;
            	            	    	int parIndex=0;
            	            	    
            	            // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:113:6: (fpi= ID ( COMMA pi= ID )* )?
            	            int alt4=2;
            	            int LA4_0 = input.LA(1);

            	            if ( (LA4_0==ID) ) {
            	                alt4=1;
            	            }
            	            switch (alt4) {
            	                case 1 :
            	                    // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:114:7: fpi= ID ( COMMA pi= ID )*
            	                    {
            	                    fpi=(Token)match(input,ID,FOLLOW_ID_in_declist320); 

            	                    	    		ParamNode pn = new ParamNode((fpi!=null?fpi.getText():null),atn.getParType(parIndex));
            	                    			    entry = new STentry(pn,parOffSet--);
            	                    			    hm.put((fpi!=null?fpi.getText():null),entry);
            	                    			    fn.addParam(pn);	
            	                    			    parIndex++;
            	                    	    	
            	                    // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:122:7: ( COMMA pi= ID )*
            	                    loop3:
            	                    do {
            	                        int alt3=2;
            	                        int LA3_0 = input.LA(1);

            	                        if ( (LA3_0==COMMA) ) {
            	                            alt3=1;
            	                        }


            	                        switch (alt3) {
            	                    	case 1 :
            	                    	    // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:122:8: COMMA pi= ID
            	                    	    {
            	                    	    match(input,COMMA,FOLLOW_COMMA_in_declist338); 
            	                    	    pi=(Token)match(input,ID,FOLLOW_ID_in_declist342); 

            	                    	    	    		pn = new ParamNode((fpi!=null?fpi.getText():null),atn.getParType(parIndex));
            	                    	    			    entry = new STentry(pn,parOffSet--);
            	                    	    			    hm.put((fpi!=null?fpi.getText():null),entry);
            	                    	    			    fn.addParam(pn);	
            	                    	    			    parIndex++;
            	                    	    	    	

            	                    	    }
            	                    	    break;

            	                    	default :
            	                    	    break loop3;
            	                        }
            	                    } while (true);


            	                    }
            	                    break;

            	            }

            	            match(input,RPAR,FOLLOW_RPAR_in_declist375); 

            	            }
            	            break;

            	    }

            	    match(input,CLPAR,FOLLOW_CLPAR_in_declist390); 
            	    // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:135:6: ( (dec= declist ) e= exp )
            	    // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:136:7: (dec= declist ) e= exp
            	    {
            	    // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:136:7: (dec= declist )
            	    // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:136:8: dec= declist
            	    {
            	    pushFollow(FOLLOW_declist_in_declist409);
            	    dec=declist();

            	    state._fsp--;


            	    }


            	    	    		fn.addLocalDeclarationList(dec);
            	    	    	
            	    pushFollow(FOLLOW_exp_in_declist431);
            	    e=exp();

            	    state._fsp--;


            	    	        	fn.addExpValue(e);
            	    	       		symTable.remove(nestingLevel--);
            	    	       		astList.add(fn);
            	    	       	

            	    }

            	    match(input,CRPAR,FOLLOW_CRPAR_in_declist457); 
            	    match(input,SEMIC,FOLLOW_SEMIC_in_declist464); 

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return astList;
    }
    // $ANTLR end "declist"


    // $ANTLR start "exp"
    // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:150:1: exp returns [Node ast] : f= term ( ( EQ l= term ) | ( LESSEQ l= term ) | ( GREATEREQ l= term ) )* ;
    public final Node exp() throws RecognitionException {
        Node ast = null;

        Node f = null;

        Node l = null;


        try {
            // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:151:4: (f= term ( ( EQ l= term ) | ( LESSEQ l= term ) | ( GREATEREQ l= term ) )* )
            // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:151:6: f= term ( ( EQ l= term ) | ( LESSEQ l= term ) | ( GREATEREQ l= term ) )*
            {
            pushFollow(FOLLOW_term_in_exp491);
            f=term();

            state._fsp--;

            ast = f;
            // /Users/Thomas/Dropbox/Universita/Magistrale/Primo Anno/LPeMC/Esercitazioni/Minifun/LPeMC_PRJ/src/highLevelLanguage/MiniFun.g:152:7: ( ( EQ l= term ) | ( LESSEQ l= term ) | ( GREATEREQ l= term ) )*
            loop7:
            do {
                int alt7=4;
                switch ( input.LA(1) ) {
                case EQ:
                    {
                    alt7=1;
                    }
                    break;
                case LESSEQ:
                    {
                    alt7=2;
                    }
                    break;
                case GREATEREQ:
                    {
                    alt7=3;
                    }
                    break;

                }
